--- a/style.css
+++ b/style.css
@@ -6,27 +6,23 @@
 	font-family: yeseva_one;
 	src: url(/fonts/Yeseva_One/YesevaOne-Regular.ttf);
 }
-html{
-	height: 100%;
-}
+
 body {
 	background-image: url(/images/people_walking_background_small.png);
 	background-repeat: no-repeat;
 	background-size:cover;
 	margin: 0;
-	height: 100%;
-	overflow-x: hidden;
-	overflow-y: scroll;
 }
 .grid-container {
 	display: grid;
 	grid-template-columns: calc(6*clamp(2rem, min(17vh,17vw), 14rem)) auto;
-	grid-template-rows: min(17vh,17vw) calc(1.5*clamp(2rem, min(17vh,17vw), 14rem)) min-content auto;
+	grid-template-rows: min(17vh,17vw) calc(1.5*clamp(2rem, min(17vh,17vw), 14rem)) min-content max-content;
 	background-image: linear-gradient(130deg, rgba(77, 25, 25, 0.9) , rgba(77, 25, 25, 0.97));
 	height: 100%;
 	width: 100%;
 	overflow: hidden;
 	grid-gap: min(5vh,5vw);
+	min-height: 100vh;
 }
 
 .item1 {
@@ -132,6 +128,6 @@ button{
 	}
 	#generatorContainer, #checkerContainer{
 		margin: 1rem;
-		font-size: clamp(1rem, min(5vh,5vw), 2rem);images/
+		font-size: clamp(1rem, min(5vh,5vw), 2rem);
 	}
 }
