Fixed font in style.css

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: bitter;
-	src: url(.fonts/Bitter/Bitter-VariableFont_wght.ttf);
+	src: url(fonts/Bitter/Bitter-VariableFont_wght.ttf);
 }
 @font-face {
 	font-family: yeseva_one;
